# Draughts

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MULTIPLAYER_IMPLEMENTATION.md  MULTIPLAYER_QUICKSTART.md  README.md  RELEASE-ANALYSIS.md  VARIATIONS.md  meson.build  messages.mo
.github/workflows/: flathub.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
data/: io.github.tobagin.Draughts.desktop.in  io.github.tobagin.Draughts.gresources.xml.in  io.github.tobagin.Draughts.gschema.xml.in  io.github.tobagin.Draughts.metainfo.xml.in  io.github.tobagin.Draughts.mime.xml  meson.build  style.css
data/ui/: window.blp
data/ui/dialogs/: game-end.blp  game-history.blp  game-preferences.blp  game-preferences.ui  game-replay.blp  help.blp  multiplayer.blp  new-game.blp  preferences.blp  variant-rules.blp  variant-selector.blp  variant-selector.ui  welcome.blp
data/ui/widgets/: game-controls.blp  game-controls.ui  move-history.blp  move-history.ui  timer-display.blp  timer-display.ui
help/: meson.build
help/C/: index.page  introduction.page  legal.xml  playing.page  timers.page  variants.page
packaging/: io.github.tobagin.Draughts.Devel.yml  io.github.tobagin.Draughts.yml
po/: Draughts.pot  LINGUAS  POTFILES.in  draughts.pot  en_GB.po  en_US.po  es.po  fix_fuzzy_en.sed  fix_fuzzy_es.sed  fix_fuzzy_pt.sed  messages.mo  pt.po  pt_BR.po  ru.po  temp_clean.po  update_en.sed  update_es.sed  update_pt.sed
scripts/: build.sh  publish-server.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  server.js  supabase-schema.sql
specs/001-implement-the-ruleset/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-implement-the-ruleset/contracts/: game-engine.vala  ui-components.vala
src/: Application.vala  Constants.vala  Main.vala  Window.vala  meson.build
src/dialogs/: About.vala  GameEndDialog.vala  GameHistoryDialog.vala  GamePreferences.vala  GameReplayDialog.vala  HelpDialog.vala  KeyboardShortcuts.vala  MultiplayerDialog.vala  NewGameDialog.vala  Preferences.vala  VariantRulesDialog.vala  VariantSelector.vala  WelcomeDialog.vala
src/managers/: GameHistoryManager.vala  GameSessionManager.vala  MoveHistoryManager.vala  SettingsManager.vala  SoundManager.vala
src/models/draughts/: BoardPosition.vala  DraughtsConstants.vala  DraughtsGameState.vala  DraughtsMove.vala  Game.vala  GameHistory.vala  GamePiece.vala  GamePlayer.vala  GameVariant.vala  Timer.vala
src/services/draughts/: AIDifficultyManager.vala  BaseRuleEngine.vala  BoardValidator.vala  GameController.vala  IAIPlayer.vala  IGameController.vala  IRuleEngine.vala  MinimaxAI.vala  MoveGenerator.vala  PositionEvaluator.vala  TimerController.vala  UnifiedRuleEngine.vala
src/services/network/: MultiplayerGameController.vala  NetworkClient.vala  NetworkMessage.vala  NetworkSession.vala
src/utils/: AccessibilityAnnouncer.vala  ErrorHandler.vala  KeyboardNavigationHandler.vala  Logger.vala  ResourceManager.vala
src/widgets/: BoardInteractionHandler.vala  BoardRenderer.vala  DraughtsBoard.vala  DraughtsBoardAdapter.vala  GameControls.vala  MoveHistory.vala  TimerDisplay.vala
tests/contract/: test_rule_engine_interface.vala
tests/unit/: test_base_rule_engine.vala  test_game_piece.vala  test_game_state.vala  test_move.vala  test_move_generation.vala  test_position.vala
